--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+@layer utilities {
+    .no-spinner {
+      -moz-appearance: textfield;
+    }
+  
+    .no-spinner::-webkit-outer-spin-button,
+    .no-spinner::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
